feat(customer) : fix customer-controller logic